# aula_front_back_py-js-java-devmentor

./: .gitattributes  .gitignore  README.md
backend-java/: pom.xml
backend-java/src/main/java/com/ecommerce/ecomerce/: EcomerceApplication.java
backend-java/src/main/java/com/ecommerce/ecomerce/controller/: ProductController.java
backend-java/src/main/java/com/ecommerce/ecomerce/model/: Product.java
backend-java/src/main/resources/: application.properties  data.sql
backend-node/: package-lock.json  server.js
backend-node/database/: db.js  db.sqlite  init.js
backend-python/: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml
backend-python/app/: database.py  main.py  models.py
doc/geral/: Sprint.md  prd.md  tasks.md  techspec.md
doc/teste/: plano de teste.md
framework-nextjs/: package-lock.json  package.json
framework-nextjs/app/: page.tsx
framework-nextjs/app/api/orders/: route.js
framework-nextjs/app/api/products/: route.js
framework-nextjs/app/components/: CartModal.tsx  Header.tsx  ProductCard.tsx  ProductGrid.tsx  SuccessView.tsx
framework-nextjs/app/types/: product.ts
framework-nextjs/lib/: db.js  init.js
frontend/: index.html  indexV1.html  indexV2.html
frontend-html/: indexV2.html
frontend-react/: README.md  index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  styles.css
frontend-react/src/components/: CartModal.jsx  Header.jsx  ProductCard.jsx
mobile-react-native/: app.json  package.json
mobile-reactnative/: package-lock.json
mobile-reactnative/app/(tabs)/: index.tsx
(+1 files in other folders)
