[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = "API FastAPI com SQLAlchemy"
authors = ["Leonardo <voce@exemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
